styles/elements.css
/* Copyright (c) 2015, the Dart project authors.  Please see the AUTHORS file */
/* for details. All rights reserved. Use of this source code is governed by a */
/* BSD-style license that can be found in the LICENSE file. */

/* Button css. */

.button {
  outline: none;
  color: #aaa;
  fill: #aaa;
  border: 1px solid #222;
  border-radius: 2px;
  font-family: 'Roboto', sans-serif;
  font-size: 12pt;
  line-height: 18px;
  height: 24px;
  cursor: pointer;
  padding: 2px 6px;
  transition: 100ms;
  min-width: 75px;
  background-color: #444;
  background-image: linear-gradient(to bottom, #444, #333);
}

.button.default,
.button:hover {
  color: #fff;
  fill: #fff;
}

.button:active {
  background: rgba(255, 255, 255, 0.2);
}

.button[disabled] {
  color: #555;
  fill: #555;
  pointer-events: none;
  border-color: #272727;
  background-color: #3b3b3b;
  background-image: none;
}

button.close {
  border: none;
  background: url(close.svg) center no-repeat;
  width: 24px;
  height: 24px;
  cursor: pointer;
  opacity: 0.8;
}

button.close:hover {
  opacity: 1;
}

/* Splitter css. */

.splitter {
  position: relative;
}

.splitter[horizontal] {
  width: auto;
  height: 48px;
  min-height: 48px;
}

.splitter[vertical] {
  width: 48px;
  min-width: 48px;
  height: auto;
}

.inner {
  position: absolute;
  pointer-events:none;
}

.splitter[horizontal] .inner {
  left: 0;
  right: 0;
  height: 1px;
  margin-top: 23px;
  box-shadow: rgba(255, 255, 255, 0.07) 0 1px 0;
  border-bottom: 1px solid #121212;
}

.splitter[vertical] .inner {
  top: 0;
  bottom: 0;
  width: 1px;
  margin-left: 23px;
  box-shadow: rgba(255, 255, 255, 0.07) 1px 0 0 inset;
  border-left: 1px solid #121212;
}

/* style the <select> element */

select {
  -webkit-border-radius: 0px;
  color: #aaa;
  fill: #aaa;
  border: 1px solid #222;
  border-radius: 2px;
  font-family: 'Roboto', sans-serif;
  font-size: 12pt;
  line-height: 18px;
  height: 24px;
  cursor: pointer;
  padding: 2px 6px;
  background-color: #444;
  background-image: linear-gradient(to bottom, #444, #333);
}

